ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_IaaS__CnP_Package_Version__c/CnP_IaaS__CnP_Package_Version__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Package Version</label>
    <nameField>
        <label>C&amp;P Package Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P Package Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>