ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_IaaS__CnP_Package_Version__c/fields/CnP_IaaS__Appexchange_Link__c.field-meta.xml
<CustomField>
    <fullName>CnP_IaaS__Appexchange_Link__c</fullName>
    <label>Appexchange Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>