ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_IaaS__CnP_Package_Version__c/fields/CnP_IaaS__Installed_Version_Number__c.field-meta.xml
<CustomField>
    <fullName>CnP_IaaS__Installed_Version_Number__c</fullName>
    <label>Installed Version Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>