ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_IaaS__CnP_Package_Version__c/fields/CnP_IaaS__Manual__c.field-meta.xml
<CustomField>
    <fullName>CnP_IaaS__Manual__c</fullName>
    <label>Manual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>