ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_IaaS__CnP_Package_Version__c/fields/CnP_IaaS__Namespace__c.field-meta.xml
<CustomField>
    <fullName>CnP_IaaS__Namespace__c</fullName>
    <label>Namespace</label>
    <length>50</length>
    <type>Text</type>
</CustomField>