ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_IaaS__CnP_Package_Version__c/fields/CnP_IaaS__Release_Date__c.field-meta.xml
<CustomField>
    <fullName>CnP_IaaS__Release_Date__c</fullName>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>